# slowking

./: .dockerignore  .env.dev  .env.test  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  Taskfile.yml  alembic.ini  db_ready.py  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
.github/workflows/: ci.yml
artifacts/: doc1.txt
eigenapi/: Dockerfile  entrypoint.sh  main.py  pyproject.toml
slowking/: bootstrap.py  config.py  router.py
slowking/adapters/: db_engine.py  http.py  notifications.py  orm.py  redis_event_publisher.py  report.py  repository.py
slowking/adapters/alembic/: env.py
slowking/adapters/alembic/versions/: 06c957226763_change_document_column_name_to_eigen_.py  2018945ef499_create_benchmark_tables.py  3bd51d191df3_add_project_column_for_docs_uploaded_.py  3c0b00800302_add_private_col_for_benchmark_type.py  e721ff10752f_change_document_column_name_to_eigen_.py
slowking/domain/: benchmarks.py  commands.py  events.py  exceptions.py  model.py
slowking/entrypoints/: event_consumer.py  http.py
slowking/service_layer/: event_publisher.py  handlers.py  messagebus.py  unit_of_work.py
src/: bootstrap.py  config.py  router.py
src/adapters/: db_engine.py  http.py  http_client.py  notifications.py  orm.py  redis_event_publisher.py  repository.py
src/domain/: commands.py  domain.py  events.py  model.py
src/entrypoints/: api.py  event_consumer.py  http.py
src/service_layer/: handlers.py  messagebus.py  unit_of_work.py
tests/: conftest.py
tests/data/: auth.json  payload.json
tests/domain/: test_domain.py
tests/integration/slowking/: test_router.py
tests/integration/slowking/adapters/: test_repository.py
tests/integration/slowking/entrypoints/: test_http.py
tests/integration/slowking/service_layer/: test_handlers.py  test_unit_of_work.py
tests/slowking/adapters/: test_report.py
tests/slowking/domain/: test_domain.py  test_model.py
tests/unit/slowking/domain/: test_benchmarks.py  test_events.py  test_model.py
tests/unit/slowking/service_layer/: test_event_publisher.py
