[tool.poetry]
name = "slowking"
version = "0.1.0"
description = "A proof of concept benchmarking tool."
authors = ["Sam Atkins"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.97.0"
redis = "^4.5.5"
uvicorn = "^0.22.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"
black = "^23.3.0"
pytest = "^7.4.0"
watchdog = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
