[tool.poetry]
name = "slowking"
version = "0.1.0"
description = "A proof of concept benchmarking tool."
authors = ["Sam Atkins"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.97.0"
redis = "^4.5.5"
uvicorn = "^0.22.0"
sqlalchemy = "^2.0.17"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"
black = "^23.3.0"
pytest = "^7.4.0"
watchdog = "^3.0.0"
mypy = "^1.4.0"
types-redis = "^4.5.5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
