[tool.poetry]
name = "slowking"
version = "0.1.0"
description = "A proof of concept benchmarking tool."
authors = ["Sam Atkins"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.97.0"
redis = "^4.5.5"
uvicorn = "^0.22.0"
sqlalchemy = "^2.0.17"
psycopg2-binary = "^2.9.6"
pydantic = "^1.10.9"
requests = "^2.31.0"
tenacity = "^8.2.2"
alembic = "^1.11.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"
black = "^23.3.0"
pytest = "^7.4.0"
watchdog = "^3.0.0"
mypy = "^1.4.0"
types-redis = "^4.6.0.8"
httpx = "^0.24.1"
ruff = "^0.1.3"
types-requests = "^2.31.0.1"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.ruff]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = ["E", "F"]
ignore = []

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
per-file-ignores = {}

# Same as Black.
line-length = 88

[tool.coverage.run]
branch = true
omit = ["tests/*", "slowking/alembic/*"]

[tool.coverage.html]
directory = "coverage_html_report"

[tool.ruff.isort]
known-third-party = [
    "alembic",
    "fastapi",
    "psycopg2",
    "pydantic",
    "requests",
    "sqlalchemy",
    "tenacity",
    "uvicorn",
]
